編輯觸發事件

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3219,3 +3219,7 @@ input, select, textarea {
 			}
 
 	}
+
+	#contact-form input:hover, #contact-form textarea:hover {
+		background-color: #3eb08f;
+	}
